<resources>
    <string name="app_name">WelcomeToApp</string>
    <string name="welcome_to_the_apps">Welcome to the Apps</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="doesn_t_have_an_account_yet">Doesn\'t have an account yet?</string>
    <string name="sign_up"><u>Sign Up</u></string>
</resources>